# spotify-inbox

./: Cargo.toml  README.md
src/: cli.rs  config.rs  handler.rs  main.rs  spotify.rs  storage.rs
src/commands/: inbox.rs  mod.rs  sync.rs
