[package]
name = "spotify_inbox"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.0.5", features = ["derive"] }
rspotify = { version = "0.11.3", features = ["client-ureq", "ureq-rustls-tls", "cli", "env-file"], default-features = false }
rspotify-model = "0.11.3"
serde_json = "1.0.75"
tokio = { version = "1", features = ["full"] }
xdg = "2.4.0"
