[package]
name = "spotify_inbox"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.0.5", features = ["derive"] }
console = "0.15.0"
indicatif = "0.16.2"
rand = "0.8.4"
rspotify = { version = "0.11.3", features = ["client-ureq", "ureq-rustls-tls", "cli", "env-file"], default-features = false }
rspotify-model = "0.11.3"
serde = "1.0.135"
serde_json = "1.0.75"
tokio = { version = "1", features = ["full"] }
xdg = "2.4.0"
